# nedo-ai-safety-agent

./: .gitignore  ADVERSARIAL_DETECTOR_CLEAN_JSON.md  ADV_DETECTOR_CONTEXT_FIX.md  AGENTIC_ENHANCEMENTS_SUMMARY.md  CLEANUP_CHECKLIST.md  CONFIG_CENTRALIZATION.md  CONTEXT_PRESERVATION_VERIFICATION.md  DEBUG_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.startup_build  Dockerfile.with_vectordb  ENHANCED_SEARCH_SUMMARY.md  GEMINI.md  Makefile  PROJECT_CONTEXT_AND_HISTORY.md  QUICKSTART.md  QUICK_REPLY_CONTEXT_FIX.md  QUICK_START_PDF_COLLECTION.md  README.md  README_UV_SETUP.md  VECTOR_DB_DEPLOYMENT.md  clear_vector_db.py  deploy-to-cloud-run.sh  deploy.sh  env.example  env.production  env_template.txt  ingest_documents.py  policy.yaml  pyproject.toml  requirements.txt  run_server.py  service.yaml  start.sh  stop.sh
.next/: trace
app/: agent.py  config.py  deployment_config.py  enhanced_google_search.py  intake_suggestions.py  minimal_nodes.py  mock_agent.py  real_google_search.py  real_vector_db.py  server.py  simple_agent.py  test_agent.py  types.py  vector_db.py  working_agent.py
backend/: __init__.py  ingest_pdfs_vertex.py  pyproject.toml
backend/api/: server.py
backend/core/: graph.py  state.py
backend/evaluation/: __init__.py  alerts.py  audit.py  benchmarks.py  metrics.py  quality.py  safety.py
backend/middleware/: __init__.py  metrics.py  pii_filter.py  safety.py
backend/nodes/: __init__.py  check_scope.py  extract_facts.py  find_places.py  generate_phrases.py  search.py  search_answer.py
backend/services/: context.py  query.py
backend/src/: agent.py  app.py  config.py  enhanced_google_search.py  logging_config.py  minimal_nodes.py  real_google_search.py  real_vector_db.py  session_manager.py  settings.py  vector_db.py
backend/src/api/: __init__.py  app.py
backend/src/core/: __init__.py  agent.py  models.py  session_manager.py  settings.py
backend/src/nodes/: __init__.py  adversarial_detector.py  agentic_orchestrator.py  agentic_search_orchestrator.py  evaluator_optimizer.py  hybrid_search.py  intake_agent.py  legal_checker.py  multi_step_procedure_agent.py  query_synthesizer.py  rag_agent.py  response_synthesizer.py  scope_checker.py  vector_rag.py
backend/src/nodes/1_intake/: __init__.py
backend/src/nodes/2_search/: __init__.py  search.py
backend/src/nodes/3_processing/: __init__.py
backend/src/nodes/4_response/: __init__.py
backend/src/nodes/helpers/: __init__.py
backend/src/nodes/intake/: __init__.py  adversarial_detector.py  intake_agent.py  scope_checker.py
backend/src/nodes/processing/: __init__.py  procedure_formatter.py
backend/src/nodes/response/: __init__.py  grounding_validator.py  legal_checker.py  response_synthesizer.py
backend/src/nodes/search/: __init__.py  query_synthesizer.py  search.py
backend/src/services/: __init__.py  enhanced_google_search.py  real_google_search.py  vector_db.py
backend/src/utils/: error_diagnostics.py  facts_extractor.py  llm_factory.py  logging.py  logging_config.py  node_helpers.py  observability.py  tracing.py  typing.py
backend/tools/: google_maps.py  vertex_answer.py  vertex_search.py
backend/utils/: citation_extractor.py  config.py  langfuse_config.py  logging_config.py  model_config.py
chroma_db/: chroma.sqlite3
datasets/: README.md
demo/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deploy-to-cloud-run.sh  env_template.txt  pyproject.toml  run_server.py  start.sh
docs/: AGENTIC_FEATURES_IMPLEMENTED.md  AGENT_EVALUATION_IMPLEMENTATION_SUMMARY.md  (+27 more)
(+803 files in other folders)
