[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "japan-helpdesk-backend"
version = "0.1.0"
description = ""
dependencies = [
    "langchain-google-vertexai",
    "langchain",
    "langgraph",
    "langchain-community",
    "langchain-core",
    "langfuse>=3.0.0",
    "opentelemetry-exporter-gcp-trace",
    "google-cloud-logging",
    "google-cloud-aiplatform",
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings>=2.11.0",
    "numpy",
    "aiohttp",
    "python-dotenv",
    "googlesearch-python",
    "chromadb",
    "sentence-transformers",
    "langchain-chroma",
    "langchain-google-genai",
    "langchain-huggingface",
    "requests",
    "trafilatura",
    "pypdf",
]

requires-python = ">=3.10,<3.14"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.8",
    "nest-asyncio>=1.6.0",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["src"]
